--- a/src/.gitignore
+++ b/src/.gitignore
@@ -2,16 +2,8 @@ Makefile
 Makefile.in
 .deps
 *.rc
-crispy-doom
-crispy-heretic
-crispy-hexen
-crispy-server
-crispy-strife
-crispy-doom-setup
-crispy-heretic-setup
-crispy-hexen-setup
-crispy-strife-setup
-crispy-setup
+skaia
+skaia-setup
 *.cfg
 *.exe
 *.desktop
